--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Villas 4 U</title>
 </head>
 <body>
-    yoooo
+    Yoo op de index
 </body>
 </html>
