--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
 <body>
-    yoooo
+<div class="h-14 bg-gradient-to-br from-sky-500 to-indigo-500"></div>
 </body>
 </html>
