--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -7,7 +7,10 @@
     <title>Villas 4 U | Contact</title>
 </head>
 <body>
-    YOOOOO contact
-    niewus
+    <% include ./include/header %>
+
+    contact haha cont
+
+    <% include ./include/footer %>
 </body>
 </html>
