--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -7,6 +7,10 @@
     <title>Villas 4 U</title>
 </head>
 <body>
-    Yoo op de index
+    <% include ./include/header %>
+
+    Hiero de contento van de indexio
+
+    <% include ./include/footer %>
 </body>
 </html>
