remco jij oenenmeloen

--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -7,10 +7,9 @@
     <title>Villas 4 U | Contact</title>
 </head>
 <body>
-    <% include ./include/header %>
+    <% include('include/header') %>
 
-    contact haha cont
+    <p>contact haha cont</p>
 
-    <% include ./include/footer %>
 </body>
 </html>
