astublieft hiet is de pagnas met foot en hed

--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -7,9 +7,10 @@
     <title>Villas 4 U | Contact</title>
 </head>
 <body>
-    <% include('include/header') %>
+    <%- include('include/header') %>
 
     <p>contact haha cont</p>
 
+    <%- include('include/footer') %>
 </body>
 </html>
