--- a/pages/huis.ejs
+++ b/pages/huis.ejs
@@ -7,10 +7,10 @@
     <title>Villas 4 U | Huis</title>
 </head>
 <body>
-    <% include ./include/header %>
+    <%- include('include/header') %>
 
     huus pagina voor de huus
 
-    <% include ./include/footer %>
+    <%- include('include/footer') %>
 </body>
 </html>
