--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -7,10 +7,10 @@
     <title>Villas 4 U</title>
 </head>
 <body>
-    <% include ./include/header %>
+    <%- include('include/header') %>
 
     Hiero de contento van de indexio
 
-    <% include ./include/footer %>
+    <%- include('include/footer') %>
 </body>
 </html>
