--- a/pages/include/header.ejs
+++ b/pages/include/header.ejs
@@ -1,7 +1,7 @@
 <nav>
 
     <div>
-        <a href="index">index</a>
-        <a href="contact">contact</a>
+        <a href="../index.ejs">index</a>
+        <a href="../contact.ejs">contact</a>
     </div>
 </nav>
