--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<div class="h-14 bg-gradient-to-br from-sky-500 to-indigo-500"></div>
     <title>Villas 4 U</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/5d4a18d08e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    Yoo op de index
+    <div class="h-28 w-full bg-top bg-center">
+
+    </div>
 </body>
 </html>
