--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -10,8 +10,14 @@
     <script src="https://kit.fontawesome.com/5d4a18d08e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="h-28 w-full bg-top bg-center">
-
+    <div class="h-28 w-full bg-top bg-center grid grid-cols-4 grid-rows-1">
+        <div class="flex flex-col justify-center items-center col-span-1">
+            <img src="img/logo.svg" alt="" class="h-16 col-span-1 row-span-1">
+        </div>
+        <div class="flex flex-row justify-center items-center col-start-4 row-span-1">
+            <a href="" class="text-white text-2xl hover:text-slate-300 mx-8">Home</a>
+            <a href="" class="text-white text-2xl hover:text-slate-300 mx-8">Contact</a>
+        </div>
     </div>
 </body>
 </html>
