--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -1,19 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villas 4 U | Contact</title>
-    <script src="script/urlSearch.js" type="module"></script>
-    <script src="script/database.js" type="module"></script>
-</head>
-<body>
-   <div id="titel"></div>
-   <div id="adres"></div>
-   <div id="prijs"></div>
-   <div id="fotos"></div>
-   <div id="contact"></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="script/tailwind.js"></script>
+        <title>Villas 4 U</title>
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <script src="https://kit.fontawesome.com/5d4a18d08e.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <script src="script/urlSearch.js" type="module"></script>
+        <script src="script/database.js" type="module"></script>
+        <script>
+            tailwind.config = {
+                theme: {
+                    extend: {
+                        colors: {
+                            clifford: '#da373d',
+                        }
+                    }
+                }
+            }
+        </script>
+        <style type="text/tailwindcss">
+            @layer utilities {
+                .h-full{
+                    height: 800px;
+                }
+    
+                .h-half{
+                    height: 1400px;
+                }
+    
+                .h-small{
+                    height: 3000px;
+                }
+    
+                .grid-rows-7{
+                    grid-template-rows: repeat(7, minmax(0, 1fr));
+                }
+    
+                .grid-rows-8{
+                    grid-template-rows: repeat(8, minmax(0, 1fr));
+                }
+    
+                .grid-rows-9{
+                    grid-template-rows: repeat(9, minmax(0, 1fr));
+                }
+    
+                .grid-rows-10{
+                    grid-template-rows: repeat(10, minmax(0, 1fr));
+                }
+            }
+        </style>
+    </head>
+    <body class="min-h-screen">
+        <%- include('../public/components/header.ejs') %>
+        <main>
+            <h1 id="kop">Contact</h1>
+        </main>
 
+   <%- include('../public/components/footer.ejs') %>
 </body>
 </html>
