--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -75,7 +75,7 @@
         <div class="hidden lg:block"></div>
         <div class="flex flex-row justify-center items-center">
             <a href="" class="text-white text-2xl hover:text-slate-300 mx-8">Home</a>
-            <a href="" class="text-white text-2xl hover:text-slate-300 mx-8">Contact</a>
+            <a href="/contact.ejs" class="text-white text-2xl hover:text-slate-300 mx-8">Contact</a>
         </div>
     </header>
     <main class="grid lg:grid-rows-2 lg:grid-cols-3 sm:grid-rows-3 sm:grid-cols-2 grid-cols-1 grid-rows-6 sm:max-w-xl lg:max-w-4xl mx-auto sm:h-half lg:h-full gap-5 mt-8 h-small max-w-xs">
