--- a/pages/huis1.ejs
+++ b/pages/huis1.ejs
@@ -97,8 +97,8 @@
 </header>
 <main class="grid grid-cols-2 grid-rows-1 min-h-full w-80p mx-auto mt-5" style="min-height: 80vh">
     <div class="grid grid-rows-2 grid-cols-1">
-            <div id="huis1 " class="items-center w-10/12 h-5/6 rounded-3xl" style="background-image: url('img/huis-1/1.jpg')">
-                <i class="bi bi-arrow-left"></i>
+            <div id="huis1 " class="items-center w-10/12 h-5/6 rounded-3xl flex center-items bg-cover" style="background-image: url('img/huis-1/1.jpg')">
+                <i class="bi bi-arrow-left bg-white p-2 rounded-lg -ml-2 shadow-xl"></i>
             </div>
 
     <div class=""></div>
