--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -69,7 +69,7 @@
 <body class="min-h-screen">
     <%- include('../public/components/header.ejs') %>
     <main class="grid lg:grid-rows-2 lg:grid-cols-3 sm:grid-rows-3 sm:grid-cols-2 grid-cols-1 grid-rows-6 sm:max-w-xl lg:max-w-4xl mx-auto sm:h-half lg:h-full gap-5 mt-8 h-small max-w-xs">
-        <a href="huis1.ejs" id="card1" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
+        <a href="huis1" id="card1" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
             <img src="img/huis-1/1.jpg" class="row-span-4 object-cover max-h-full w-full"/>
             <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Dijkvilla • Bouwjaar 2022</div>
             <div class="font-bold text-3xl items-center ml-1 flex">€ 3.200.000</div>
