--- a/public/components/header.ejs
+++ b/public/components/header.ejs
@@ -5,7 +5,7 @@
     <div class="hidden lg:block"></div>
     <div class="hidden lg:block"></div>
     <div class="flex flex-row justify-center items-center">
-        <a href="/" class="text-white text-2xl hover:text-slate-300 mx-8">Home</a>
+        <a href="/index" class="text-white text-2xl hover:text-slate-300 mx-8">Home</a>
         <a id="contactButton" href="contact" class="text-white text-2xl hover:text-slate-300 mx-8">Contact</a>
     </div>
 </header>
