--- a/pages/huis1.ejs
+++ b/pages/huis1.ejs
@@ -91,8 +91,8 @@
     <div class="hidden lg:block"></div>
     <div class="hidden lg:block"></div>
     <div class="flex flex-row justify-center items-center">
-        <a href="" class="text-white text-2xl hover:text-slate-300 mx-8">Home</a>
-        <a href="" class="text-white text-2xl hover:text-slate-300 mx-8">Contact</a>
+        <a href="/index" class="text-white text-2xl hover:text-slate-300 mx-8">Home</a>
+        <a href="/contact?huis=1" class="text-white text-2xl hover:text-slate-300 mx-8">Contact</a>
     </div>
 </header>
 <main class="grid grid-cols-2 grid-rows-1 min-h-full w-80p mx-auto mt-5" style="min-height: 80vh">
