--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -49,8 +49,8 @@
         <div class="hidden lg:block"></div>
         <div class="hidden lg:block"></div>
         <div class="flex flex-row justify-center items-center">
-            <a href="" class="text-white text-2xl hover:text-slate-300 mx-8">Home</a>
-            <a href="/contact.ejs" class="text-white text-2xl hover:text-slate-300 mx-8">Contact</a>
+            <a href="index" class="text-white text-2xl hover:text-slate-300 mx-8">Home</a>
+            <a href="/contact" class="text-white text-2xl hover:text-slate-300 mx-8">Contact</a>
         </div>
     </header>
     <section id="location" class="mx-auto w-9/12 bg-black mt-3 h-80 rounded-lg grid grid-rows-1 grid-cols-2">
