--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -121,7 +121,7 @@
         <a href="" id="card4" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
             <img src="img/huis-4/1.jpg" class="row-span-4 object-cover max-h-full w-full"/>
             <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Dijkvilla • Bouwjaar 2022</div>
-            <div class="font-bold text-3xl items-center ml-1 flex">2.800.000</div>
+            <div class="font-bold text-3xl items-center ml-1 flex">€ 2.800.000</div>
             <div class="font-bold text-m items-center ml-1 flex">1398 AA Muiden, Nr. 40</div>
             <div class="bg-white grid grid-cols-2 grid-rows-1">
                 <div class="flex items-center justify-center text-s">
