--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <!-- <script src="/script/urlSearch.js" type="module"></script> -->
+    <script src="/script/form.js" defer></script>
 
     <script>
         tailwind.config = {
