--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -92,15 +92,15 @@
                 <table class="w-full" style="">
                     <tr>
                         <td class="lg:w-48">Vooraam</td>
-                        <td><input type="text" name="name" id="name" class="w-full border-2 border-white rounded-lg my-2"></td>
+                        <td><input required type="text" name="name" id="name" class="w-full border-2 border-white rounded-lg my-2"></td>
                     </tr>
                     <tr>
                         <td class="lg:w-48">Achternaam</td>
-                        <td><input type="text" name="sirname" id="sirname" class="w-full border-2 border-white rounded-lg my-2"></td>
+                        <td><input required type="text" name="sirname" id="sirname" class="w-full border-2 border-white rounded-lg my-2"></td>
                     </tr>
                     <tr>
                         <td class="lg:w-48">E-mail</td>
-                        <td><input type="text" name="email" id="email" class="w-full border-2 border-white rounded-lg my-2"></td>
+                        <td><input required type="text" name="email" id="email" class="w-full border-2 border-white rounded-lg my-2"></td>
                     </tr>
                     <tr>
                         <td class="lg:w-48">Gekozen villa:</td>
@@ -116,11 +116,11 @@
                     
                     <tr>
                         <td class="lg:w-48">Bod in €</td>
-                        <td><input type="text" name="bod" id="bod" class="w-full border-2 border-white rounded-lg my-2"></td>
+                        <td><input required type="number" name="bod" id="bod" class="w-full border-2 border-white rounded-lg my-2"></td>
                     </tr>
                     <tr>
                         <td class="lg:w-48">Bericht</td>
-                        <td><textarea name="message" id="message" class="w-full border-2 border-white rounded-lg my-2"></textarea></td>
+                        <td><textarea required name="message" id="message" class="w-full border-2 border-white rounded-lg my-2"></textarea></td>
                     </tr>
                     <tr>
                         <td class="lg:w-48"></td>
