--- a/pages/huis1.ejs
+++ b/pages/huis1.ejs
@@ -54,6 +54,14 @@
                 grid-template-rows: repeat(10, minmax(0, 1fr));
             }
 
+            .grid-rows-11{
+                grid-template-rows: repeat(11, minmax(0, 1fr));
+            }
+
+            .grid-cols-10{
+                grid-template-columns: repeat(10, minmax(0, 1fr));
+            }
+
             .card-3-house{
                 background-image: url("img/huis-3/1.jpg");
                 background-size: cover;
@@ -97,8 +105,9 @@
 </header>
 <main class="grid grid-cols-2 grid-rows-1 min-h-full w-80p mx-auto mt-5" style="min-height: 80vh">
     <div class="grid grid-rows-2 grid-cols-1">
-            <div id="huis1 " class="items-center w-10/12 h-5/6 rounded-3xl flex center-items bg-cover" style="background-image: url('img/huis-1/1.jpg')">
-                <i class="bi bi-arrow-left bg-white p-2 rounded-lg -ml-2 shadow-xl"></i>
+            <div id="huis1" class="items-center w-10/12 h-5/6 rounded-3xl bg-cover grid grid-cols-10 grid-rows-11" style="background-image: url('img/huis-1/1.jpg')">
+                <i class="bi bi-arrow-left bg-white p-2 rounded-lg -ml-2 shadow-xl" style="grid-column: 0/1; grid-row: 6/7; text-align: center;" onclick="houseClickDown()"></i>
+                <i class="bi bi-arrow-right bg-white p-2 rounded-lg -mr-2 shadow-xl" style="grid-column: 10/11; grid-row: 6/7; text-align: center;"onclick="houseClickUp()"></i>
             </div>
 
     <div class=""></div>
