--- a/pages/dashboard/adminview.ejs
+++ b/pages/dashboard/adminview.ejs
@@ -14,7 +14,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
+        <script>
+            // make cookie
+                document.cookie = "login=true; expires=Thu, 18 Dec 2050 12:00:00 UTC"; 
+        </script>
         <script>
             tailwind.config = {
                 theme: {
