--- a/pages/dashboard/adminview.ejs
+++ b/pages/dashboard/adminview.ejs
@@ -14,7 +14,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
+        <script src="script/app.js"></script>
+
         <script>
             tailwind.config = {
                 theme: {
@@ -44,6 +45,19 @@
         </style>
     </head>
 <body>
-    
+    <table id="dataTabel">
+        <tr>
+            <td>ID</td>
+            <td>naam</td>
+            <td>achternaam</td>
+            <td>email</td>
+            <td>bericht</td>
+            <td>bod</td>
+            <td>villa</td>
+        </tr>
+        <tr class="data">
+            
+        </tr>
+    </table>
 </body>
 </html>
