--- a/pages/dashboard/adminview.ejs
+++ b/pages/dashboard/adminview.ejs
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="script/tailwind.js"></script>
-        <title>Villas 4 U</title>
+        <title>Admin Portal</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <script src="https://kit.fontawesome.com/5d4a18d08e.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
