--- a/public/components/header.ejs
+++ b/public/components/header.ejs
@@ -1,7 +1,7 @@
 <header class="h-28 w-full bg-top bg-center grid grid-cols-1 grid-rows-2 lg:grid-cols-4 lg:grid-rows-1">
-    <div class="flex flex-col justify-center items-center col-span-1">
+    <a href="index" class="flex flex-col justify-center items-center col-span-1">
         <img src="img/logo.svg" alt="" class="h-16">
-    </div>
+    </a>
     <div class="hidden lg:block"></div>
     <div class="hidden lg:block"></div>
     <div class="flex flex-row justify-center items-center">
