soort van niet werkende ajax

--- a/pages/dashboard/adminview.ejs
+++ b/pages/dashboard/adminview.ejs
@@ -47,9 +47,8 @@
             }
         </style>
     </head>
-<body>
+<body id="body">
     <table id="dataTabel">
-        <tr>
             <td>ID</td>
             <td>naam</td>
             <td>achternaam</td>
@@ -57,10 +56,188 @@
             <td>bericht</td>
             <td>bod</td>
             <td>villa</td>
+            <!-- ja is groote he, ik ben te nutteloos om het automatisch te doen -->
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
         </tr>
-        <tr class="data">
-
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
         </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        <tr>
+            <td class="id"></td>
+            <td class="naam"></td>
+            <td class="achternaam"></td>
+            <td class="email"></td>
+            <td class="bericht"></td>
+            <td class="bod"></td>
+            <td class="villa"></td>
+        </tr>
+        
     </table>
 </body>
 </html>
