--- a/pages/dashboard/adminview.ejs
+++ b/pages/dashboard/adminview.ejs
@@ -47,197 +47,7 @@
             }
         </style>
     </head>
-<body id="body">
-    <table id="dataTabel">
-            <td>ID</td>
-            <td>naam</td>
-            <td>achternaam</td>
-            <td>email</td>
-            <td>bericht</td>
-            <td>bod</td>
-            <td>villa</td>
-            <!-- ja is groote he, ik ben te nutteloos om het automatisch te doen -->
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        <tr>
-            <td class="id"></td>
-            <td class="naam"></td>
-            <td class="achternaam"></td>
-            <td class="email"></td>
-            <td class="bericht"></td>
-            <td class="bod"></td>
-            <td class="villa"></td>
-        </tr>
-        
-    </table>
+<body>
+    
 </body>
 </html>
