--- a/pages/dashboard/adminview.ejs
+++ b/pages/dashboard/adminview.ejs
@@ -48,6 +48,8 @@
         </style>
     </head>
 <body>
-    
+    <%- include('../../public/components/header.ejs') %>
+    <div id="content"></div>
+    <%- include('../../public/components/footer.ejs') %>
 </body>
 </html>
