--- a/pages/huis1.ejs
+++ b/pages/huis1.ejs
@@ -114,7 +114,7 @@
             <iframe class="w-full rounded-lg" style="height:80%" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d609.4654891446177!2d5.063010099040859!3d52.336650355862936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1snl!2snl!4v1655547664399!5m2!1snl!2snl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
-    <div class="bg-black ">
+    <div class="bg-black rounded-3xl border-8 border-transparent w-9/12 ml-8 h-5/6">
 
     </div>
 </main>
