contact auto info

--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -105,9 +105,9 @@
                     <tr>
                         <td class="lg:w-48">Gekozen villa:</td>
                         <td class="text-black my-2"><select name="villa" id="villa">
-                            <option value="villa1">1398 AA Muiden, Nr. 60</option>
-                            <option value="villa2">1398 AA Muiden, Nr. 1</option>
-                            <option value="villa3">1398 CP Muiden, Nr. 4.1</option>
+                            <option value="Dijkvilla1">1398 AA Muiden, Nr. 60</option>
+                            <option value="Dijkvilla2">1398 AA Muiden, Nr. 1</option>
+                            <option value="Hoekwoning">1398 CP Muiden, Nr. 4.1</option>
                             <option value="villa4">1398 AA Muiden, Nr. 40</option>
                             <option value="villa5">1398 AA Muiden, Nr. 8</option>
                             <option value="villa6">1398 CP Muiden, Nr. 28</option>
@@ -132,10 +132,10 @@
 
             </div>
             <div class="lg:grid grid-cols-1 grid-rows-2 hidden gap-2">
-                <div class="bg-center bg-no-repeat bg-cover" style="background-image:url(img/huis-1/1.jpg)">
+                <div class="bg-center bg-no-repeat bg-cover" id="foto1" style="background-image:url(img/huis-1/1.jpg)">
 
                 </div>
-                <div class="bg-center bg-no-repeat bg-cover" style="background-image:url(img/huis-1/2.jpg)">
+                <div class="bg-center bg-no-repeat bg-cover" id="foto2" style="background-image:url(img/huis-1/2.jpg)">
 
                 </div>
             </div>
