--- a/pages/huis2.ejs
+++ b/pages/huis2.ejs
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="/script/huis1.js" type="module"></script>
 
     <script>
         tailwind.config = {
@@ -89,15 +90,16 @@
             }
         }
     </style>
-    <script src="script/huis1.js" defer></script>
+    <!-- <script src="script/huis1.js" defer></script> -->
 </head>
 <body>
     <%- include('../public/components/header.ejs') %>
-<main class="grid grid-cols-2 grid-rows-1 min-h-full w-80p mx-auto mt-5" style="min-height: 80vh">
+    <div class="zoeker" id="Dijkvilla2"></div>
+<main id="Dijkhuis2" class="grid grid-cols-2 grid-rows-1 min-h-full w-80p mx-auto mt-5" style="min-height: 80vh tittel">
     <div class="grid grid-rows-2 grid-cols-1">
-            <div id="huis1" class="items-center w-10/12 h-5/6 rounded-3xl bg-cover grid grid-cols-10 grid-rows-11" style="background-image: url('img/huis-1/1.jpg')">
-                <i class="bi bi-arrow-left bg-white p-2 rounded-lg -ml-2 shadow-xl" style="grid-column: 0/1; grid-row: 6/7; text-align: center;" onclick="houseClickDown()"></i>
-                <i class="bi bi-arrow-right bg-white p-2 rounded-lg -mr-2 shadow-xl" style="grid-column: 10/11; grid-row: 6/7; text-align: center;"onclick="houseClickUp()"></i>
+            <div id="huis1" class="items-center w-10/12 h-5/6 rounded-3xl bg-cover grid grid-cols-10 grid-rows-11" style="background-image: url('img/huis-2/1.jpg')">
+                <i class="bi bi-arrow-left bg-white p-2 rounded-lg -ml-2 shadow-xl" style="grid-column: 0/1; grid-row: 6/7; text-align: center;" id="terug"></i>
+                <i class="bi bi-arrow-right bg-white p-2 rounded-lg -mr-2 shadow-xl" style="grid-column: 10/11; grid-row: 6/7; text-align: center;" id="volgende"></i>
             </div>
 
 
@@ -107,8 +109,8 @@
     <div class="bg-black rounded-3xl w-9/12 h-5/6 mx-auto my-auto text-white">
         <div class="grid grid-cols-1 grid-rows-6 h-56 w-9/12 mx-auto">
             <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Dijkvilla • Bouwjaar 2022</div>
-                <div class="font-bold text-3xl items-center ml-1 flex">€ 3.200.000</div>
-                <div class="font-bold text-m items-center ml-1 flex">1398 AA Muiden, Nr. 60</div>
+                <div class="font-bold text-3xl items-center ml-1 flex">€ 3.150.000</div>
+                <div class="font-bold text-m items-center ml-1 flex">1398 AA Muiden, Nr. 1</div>
                 <div class="grid grid-cols-2 grid-rows-1">
                     <div class="flex items-center justify-center text-s">
                         <i class="fa-solid fa-bed ml-1"></i>
@@ -121,7 +123,7 @@
 
                 </div>
                 <p class="pt-8">
-                    De villa kent op de begane grond een grote inpandige berging/bijkeuken, een ruime werkkamer, toilet en een grote woonkeuken. Vanuit de begane grond bereiken we de aan het water gelegen tuin welke zich rondom de villa bevindt. Met een prive brug komen we aan de overkant van de watergang (ca 9,5 breed), de overtuin. Deze overtuinen kennen breedtes van 16,5 tot 21 meter en dieptes van 37 - 56 meter. Dit zijn afmetingen waar je oneindig veel mogelijkheden mee hebt. In deze overtuin is het mogelijk om een mulifunctionele ruimte/berging te creëeren tot 24 m2 groot alsmede een kas van deze afmeting. Vanuit de volledig omhaagde overtuin bereik je middels een hekje de dijk van het IJmeer waar vanuit je heerlijk kunt fietsen, wandelen of het strand kunt bereiken. 
+                    De villa kent op de begane grond een grote inpandige berging/bijkeuken, een ruime werkkamer, toilet en een grote woonkeuken. Vanuit de begane grond bereiken we de aan het water gelegen tuin welke zich rondom de villa bevindt. Met een prive brug komen we aan de overkant van de watergang (ca 9,5 breed), de overtuin. Deze overtuinen kennen breedtes van 16,5 tot 21 meter en dieptes van 37 - 56 meter. Dit zijn afmetingen waar je oneindig veel mogelijkheden mee hebt. In deze overtuin is het mogelijk om een mulifunctionele ruimte/berging te creëeren tot 24 m2 groot alsmede een kas van deze afmeting. Vanuit de volledig omhaagde overtuin bereik je middels een hekje de dijk van het IJmeer waar vanuit je heerlijk kunt fietsen, wandelen of het strand kunt bereiken.     
                 </p>
         </div>
     </div>
