--- a/pages/huis6.ejs
+++ b/pages/huis6.ejs
@@ -106,13 +106,13 @@
 
     <div class="bg-black rounded-3xl w-9/12 h-5/6 mx-auto my-auto text-white">
         <div class="grid grid-cols-1 grid-rows-6 h-56 w-9/12 mx-auto">
-            <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Dijkvilla • Bouwjaar 2022</div>
-                <div class="font-bold text-3xl items-center ml-1 flex">€ 3.200.000</div>
-                <div class="font-bold text-m items-center ml-1 flex">1398 AA Muiden, Nr. 60</div>
+            <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Vrijstaande Villa • Bouwjaar 2022</div>
+                <div class="font-bold text-3xl items-center ml-1 flex">€ 1.900.000</div>
+                <div class="font-bold text-m items-center ml-1 flex">1398 CP Muiden, Nr. 28</div>
                 <div class="grid grid-cols-2 grid-rows-1">
                     <div class="flex items-center justify-center text-s">
                         <i class="fa-solid fa-bed ml-1"></i>
-                        <b class="mr-1 ml-1 text-sm">5</b> <span class="text-sm">slaapkamers</span>
+                        <b class="mr-1 ml-1 text-sm">4</b> <span class="text-sm">slaapkamers</span>
                     </div>
                     <div class="flex items-center justify-center text-s">
                         <i class="fa-solid fa-bath ml-1"></i>
@@ -121,7 +121,7 @@
 
                 </div>
                 <p class="pt-8">
-                    De villa kent op de begane grond een grote inpandige berging/bijkeuken, een ruime werkkamer, toilet en een grote woonkeuken. Vanuit de begane grond bereiken we de aan het water gelegen tuin welke zich rondom de villa bevindt. Met een prive brug komen we aan de overkant van de watergang (ca 9,5 breed), de overtuin. Deze overtuinen kennen breedtes van 16,5 tot 21 meter en dieptes van 37 - 56 meter. Dit zijn afmetingen waar je oneindig veel mogelijkheden mee hebt. In deze overtuin is het mogelijk om een mulifunctionele ruimte/berging te creëeren tot 24 m2 groot alsmede een kas van deze afmeting. Vanuit de volledig omhaagde overtuin bereik je middels een hekje de dijk van het IJmeer waar vanuit je heerlijk kunt fietsen, wandelen of het strand kunt bereiken. 
+                    Deze vrijstaande villa gelegen in De Krijgsman Muiden staat als imposante poortwachter aan de kop van het hof. De villa beschikt over maar liefst 4 slaapkamers, 2 badkamers, een tuin aan het water, 2 parkeerplaatsen op eigen terrein en is geschikt voor dubbele bewoning. 
                 </p>
         </div>
     </div>
