--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </a>
-        <a href="" id="card2" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
+        <a href="huis2" id="card2" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
             <img src="img/huis-2/1.jpg" class="row-span-4 object-cover max-h-full w-full"/>
             <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Dijkvilla • Bouwjaar 2022</div>
             <div class="font-bold text-3xl items-center ml-1 flex">€ 3.150.000</div>
@@ -103,7 +103,7 @@
             </div>
         </a>
 
-        <a href="" id="card3" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
+        <a href="huis3" id="card3" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
             <div class="row-span-4 object-cover m-h-full w-full object-fill card-3-house"> </div>
             <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Villa, Hoekwoning • Bouwjaar 2022</div>
             <div class="font-bold text-3xl items-center ml-1 flex">€ 2.500.000</div>
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </a>
-        <a href="" id="card4" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
+        <a href="huis4" id="card4" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
             <img src="img/huis-4/1.jpg" class="row-span-4 object-cover max-h-full w-full"/>
             <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Dijkvilla • Bouwjaar 2022</div>
             <div class="font-bold text-3xl items-center ml-1 flex">€ 2.800.000</div>
@@ -135,7 +135,7 @@
                 </div>
             </div>
         </a>
-        <a href="" id="card5" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
+        <a href="huis5" id="card5" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
             <img src="img/huis5.jpg" class="row-span-4 object-cover max-h-full w-full"/>
             <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Dijkvilla • Bouwjaar 2022</div>
             <div class="font-bold text-3xl items-center ml-1 flex">€ 2.700.000</div>
@@ -151,7 +151,7 @@
                 </div>
             </div>
         </a>
-        <a href="" id="card6" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
+        <a href="huis6" id="card6" class="rounded-3xl grid grid-cols-1 grid-rows-8 bg-gray-200 overflow-hidden shadow-md">
             <div class="row-span-4 object-cover max-h-full w-full card-6-house"> </div>
             <div class="uppercase text-xs font-bold ml-1 flex align-center items-center">Vrijstaande Villa • Bouwjaar 2022</div>
             <div class="font-bold text-3xl items-center ml-1 flex">€ 1.900.000</div>
