--- a/pages/huis3.ejs
+++ b/pages/huis3.ejs
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="/script/huis1.js" type="module"></script>
+
 
     <script>
         tailwind.config = {
@@ -93,11 +95,12 @@
 </head>
 <body>
     <%- include('../public/components/header.ejs') %>
+    <div class="zoeker" id="Hoekwoning"></div>
 <main class="grid grid-cols-2 grid-rows-1 min-h-full w-80p mx-auto mt-5" style="min-height: 80vh">
     <div class="grid grid-rows-2 grid-cols-1">
             <div id="huis1" class="items-center w-10/12 h-5/6 rounded-3xl bg-cover grid grid-cols-10 grid-rows-11" style="background-image: url('img/huis-1/1.jpg')">
-                <i class="bi bi-arrow-left bg-white p-2 rounded-lg -ml-2 shadow-xl" style="grid-column: 0/1; grid-row: 6/7; text-align: center;" onclick="houseClickDown()"></i>
-                <i class="bi bi-arrow-right bg-white p-2 rounded-lg -mr-2 shadow-xl" style="grid-column: 10/11; grid-row: 6/7; text-align: center;"onclick="houseClickUp()"></i>
+                <i class="bi bi-arrow-left bg-white p-2 rounded-lg -ml-2 shadow-xl" style="grid-column: 0/1; grid-row: 6/7; text-align: center;" id="terug"></i>
+                <i class="bi bi-arrow-right bg-white p-2 rounded-lg -mr-2 shadow-xl" style="grid-column: 10/11; grid-row: 6/7; text-align: center;" id="volgende"></i>
             </div>
 
 
