--- a/pages/contact.ejs
+++ b/pages/contact.ejs
@@ -106,7 +106,7 @@
                     
                     <tr>
                         <td class="lg:w-48">Bod in €</td>
-                        <td><input required type="number" name="bod" id="bod" class="w-full border-2 border-white rounded-lg my-2 text-black"></td>
+                        <td><input required type="number" min="1000000" value="1000000" name="bod" id="bod" class="w-full border-2 border-white rounded-lg my-2 text-black"></td>
                     </tr>
                     <tr>
                         <td class="lg:w-48">Bericht</td>
