--- a/pages/dashboard/adminview.ejs
+++ b/pages/dashboard/adminview.ejs
@@ -9,6 +9,7 @@
         <script src="script/tailwind.js"></script>
         <title>Admin Portal</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link href="css/admin.css" rel="stylesheet" type="text/css">
         <script src="https://kit.fontawesome.com/5d4a18d08e.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +50,16 @@
     </head>
 <body>
     <%- include('../../public/components/header.ejs') %>
-    <div id="content"></div>
+    <h1 id="dashtit">Uw dashboard</h1>
+    <div id="content">
+
+
+
+        <div id="mess">
+            <h2>Uw berichten</h2>
+        </div>
+
+    </div>
     <%- include('../../public/components/footer.ejs') %>
 </body>
 </html>
