--- a/pages/dashboard/login.ejs
+++ b/pages/dashboard/login.ejs
@@ -44,6 +44,24 @@
         </style>
     </head>
 <body>
-    
+    <main class="w-full h-full flex items-center justify-center">
+        <div class="h-60 w-96 drop-shadow-lg bg-white rounded-3xl flex justify-center items-center flex-col" id="login">
+            <img src="img/logo.svg" alt="" class="h-16 mb-8">
+            <table>
+                <tr>
+                    <td>
+                        <input class="bg-slate-200 rounded-md" placeholder="Username" type="text" id="username">
+                    </td>
+                    
+                </tr>
+                <tr>
+                    <td>
+                        <input class="bg-slate-200 rounded-md" placeholder="Password" type="password" id="password">
+                    </td>
+                </tr>
+            </table>
+            <input type="submit" value="Login" class="bg-slate-200 rounded-md">
+        </div>
+    </main>
 </body>
 </html>
